--- a/analysis/Paul/PaulAdams_AnalysisQ2.Rmd
+++ b/analysis/Paul/PaulAdams_AnalysisQ2.Rmd
@@ -12,6 +12,8 @@ p_load(tidyr,dplyr,purrr,stringr,ggplot2, MASS,DAAG, sjPlot, Hmisc)
 
 ```{r, echo=F}
 df <- read.csv('./data/train.csv', stringsAsFactors = F)
+nrow(df)
+
 # Living Area Square Footage > 4k feet was determined in Analysis Q1 to be outliers (four points)
 # Count of all houses with living area square footage greater than 4k:
 nrow(df[which(df$GrLivArea > 4000),])
@@ -23,6 +25,7 @@ df <- df[which(df$GrLivArea < 4000),]
 max(df[order(-df$GrLivArea),47])
 ```
 
+### The original data has 1460 rows. After removing four outliers, the new daata now has 1456 rows.
 ### Handle NAs
 ```{r, echo=T,warning=F, message=F}
 #See structure for replacing NAs
@@ -77,7 +80,8 @@ df$BsmtFinType2[is.na(df$BsmtFinType2)] <- 0
 df$Electrical[is.na(df$Electrical)] <- "SBrkr"
 df$FireplaceQu[is.na(df$FireplaceQu)] <- "None"
 df$GarageType[is.na(df$GarageType)] <- "None"
-df$GarageYrBlt[is.na(df$GarageYrBlt)] <- mean(df$GarageYrBlt)
+df$GarageYrBlt[is.na(df$GarageYrBlt)] <- mean(df$YearBuilt)
+#df$GarageYrBlt[is.na(df$GarageYrBlt)] <- mean(df$GarageYrBlt)
 df$GarageFinish[is.na(df$GarageFinish)] <- "None"
 df$GarageQual[is.na(df$GarageQual)] <- "None"
 df$GarageCond[is.na(df$GarageCond)] <- "None"
@@ -197,5 +201,12 @@ stepwise.model$anova
 
 #################################################################################
 ################End testing quant+qual data model variable selection#############
+#################################################################################
+```
+
+# Appendix
+```{r, echo=T}
+#################################################################################
+################This is for the appendix, code is only for illustration##########
 #################################################################################
 ```
