--- a/analysis/studies/stuart/question2.Rmd
+++ b/analysis/studies/stuart/question2.Rmd
@@ -1,31 +1,62 @@
 ---
-title: "Question 2"
-author: "Stuart Miller"
+title: "Ames Iowa Housing Prices (Analysis Two)"
+author: "Paul Adams"
 date: "August 3, 2019"
-output: 
-  github_document
+output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r, echo=T, message=F, warning=FALSE}
+library(tidyverse)
+library(MASS)
+library(caret)
+library(knitr)
+
+load('../../data/data.RData')
 ```
 
-## R Markdown
+## Model
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+"By Hand" constuction.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+Based on the correlation heatmap the following parameters have a reasonible correlation with the log of `SalePrice` without high mutual correlation.
 
-```{r cars}
-summary(cars)
+* `GarageArea` 
+* `OverallQual` 
+* `GrLivArea` 
+* `TotalBsmtSF` 
+* `BsmtQual` 
+* `YearRemodAdd` 
+* `Fireplaces` 
+* `YearBuilt`
+
+Based on EDA, `TotalBsmtSF` varies by `BsmtQual`, so it will be included as an interaction. Living room areas and year built tend to vary by neighborhood, so neighborhood will be included as an interation on these variable.
+
+This model produces an adjusted R-squared of 0.882, which is an estimate of the variability in logSalePrice that is explained by the model.
+
+```{r, echo=F}
+
+model.formula = log(SalePrice) ~ GarageArea + OverallQual + GrLivArea:Neighborhood + TotalBsmtSF:BsmtQual + BsmtQual + YearRemodAdd + Fireplaces + YearBuilt:Neighborhood
+
+m <- lm(model.formula, data = train)
+summary(m)
 ```
 
-## Including Plots
+## Model Cross Validation
 
-You can also embed plots, for example:
+The RMSE and adjusted R-squared are estimated with 10 fold cross validation.
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+RMSE: 0.15
+Adj R-squared: 0.86
+
+```{r, warning=FALSE}
+# Set up repeated k-fold cross-validation
+train.control <- trainControl(method = "cv", number = 10)
+# Train the model
+model.cv <- train(model.formula, 
+                    data = train,
+                    method = 'lm',
+                    trControl = train.control)
+# print model summary
+model.cv
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
