Add fit plots Add a submission Add some temp cleaning

--- a/analysis/studies/stuart/question2.Rmd
+++ b/analysis/studies/stuart/question2.Rmd
@@ -11,7 +11,40 @@ library(MASS)
 library(caret)
 library(knitr)
 
+source('../../helper/visual.R')
+
 load('../../data/data.RData')
+test <- read_csv('../../data/test.csv') 
+
+test$LotFrontage[is.na(test$LotFrontage)] <- 0
+test$Alley[is.na(test$Alley)] <- "None"
+test$MasVnrType[is.na(test$MasVnrType)] <- "None"
+test$MasVnrArea[is.na(test$MasVnrArea)] <- 0
+test$BsmtQual[is.na(test$BsmtQual)] <- 0
+test$BsmtCond[is.na(test$BsmtCond)] <- 0
+test$BsmtExposure[is.na(test$BsmtExposure)] <- 0
+test$BsmtFinType1[is.na(test$BsmtFinType1)] <- 0
+test$BsmtFinType2[is.na(test$BsmtFinType2)] <- 0
+test$Electrical[is.na(test$Electrical)] <- "SBrkr"
+test$FireplaceQu[is.na(test$FireplaceQu)] <- "None"
+test$GarageType[is.na(test$GarageType)] <- "None"
+test$GarageYrBlt[is.na(test$GarageYrBlt)] <- mean(test$GarageYrBlt, na.rm=TRUE)
+test$GarageArea[is.na(test$GarageArea)] <- mean(test$GarageArea, na.rm=TRUE)
+test$GarageFinish[is.na(test$GarageFinish)] <- "None"
+test$GarageQual[is.na(test$GarageQual)] <- "None"
+test$GarageCond[is.na(test$GarageCond)] <- "None"
+test$PoolQC[is.na(test$PoolQC)] <- "None"
+test$Fence[is.na(test$Fence)] <- "None"
+test$MiscFeature[is.na(test$MiscFeature)] <- "None"
+test$TotalBsmtSF[is.na(test$TotalBsmtSF)] <- mean(test$TotalBsmtSF, na.rm=TRUE)
+
+test$OverallQual[is.na(test$OverallQual)] <- mean(test$OverallQual, na.rm=TRUE)
+test$YearRemodAdd[is.na(test$YearRemodAdd)] <- mean(test$YearRemodAdd, na.rm=TRUE)
+test$Fireplaces[is.na(test$Fireplaces)] <- mean(test$Fireplaces, na.rm=TRUE)
+test$YearBuilt[is.na(test$YearBuilt)] <- mean(test$YearBuilt, na.rm=TRUE)
+
+#GarageArea + OverallQual + GrLivArea:Neighborhood + TotalBsmtSF:BsmtQual + BsmtQual + YearRemodAdd + Fireplaces + YearBuilt:Neighborhood
+
 ```
 
 ## Model
@@ -33,7 +66,7 @@ Based on EDA, `TotalBsmtSF` varies by `BsmtQual`, so it will be included as an i
 
 This model produces an adjusted R-squared of 0.882, which is an estimate of the variability in logSalePrice that is explained by the model.
 
-```{r, echo=F}
+```{r, echo=T}
 
 model.formula = log(SalePrice) ~ GarageArea + OverallQual + GrLivArea:Neighborhood + TotalBsmtSF:BsmtQual + BsmtQual + YearRemodAdd + Fireplaces + YearBuilt:Neighborhood
 
@@ -58,5 +91,23 @@ model.cv <- train(model.formula,
                     trControl = train.control)
 # print model summary
 model.cv
+```
+
+## Model Fit Plots
+
+```{r, message=FALSE, warning=FALSE}
+basic.fit.plots(train, m)
+```
+
+
+
+
+## Prediction
+
+```{r, warning=FALSE}
+predictions <- as.double(exp(predict(m, test)))
+submission <- data.frame(test$Id,predictions)
+names(submission) <- c('Id','SalePrice')
+write_csv(submission, '../../data/submission_stuart.csv')
 ```
 
