--- a/analysis/studies/stuart/question2.Rmd
+++ b/analysis/studies/stuart/question2.Rmd
@@ -67,8 +67,7 @@ Based on EDA, `TotalBsmtSF` varies by `BsmtQual`, so it will be included as an i
 This model produces an adjusted R-squared of 0.882, which is an estimate of the variability in logSalePrice that is explained by the model.
 
 ```{r, echo=T}
-
-model.formula = log(SalePrice) ~ GarageArea + OverallQual + GrLivArea:Neighborhood + TotalBsmtSF:BsmtQual + BsmtQual + YearRemodAdd + Fireplaces + YearBuilt:Neighborhood
+model.formula = log(SalePrice) ~ GarageArea + OverallQual + GrLivArea + TotalBsmtSF:BsmtQual + YearRemodAdd + Fireplaces + YearBuilt:Neighborhood
 
 m <- lm(model.formula, data = train)
 summary(m)
@@ -78,8 +77,10 @@ summary(m)
 
 The RMSE and adjusted R-squared are estimated with 10 fold cross validation.
 
-RMSE: 0.15
-Adj R-squared: 0.86
+* RMSE: 0.15
+* Adj R-squared: 0.86
+
+Since this data is from Kaggle, it was also tested with Kaggle, resulting in a score of 0.15575.
 
 ```{r, warning=FALSE}
 # Set up repeated k-fold cross-validation
