--- a/analysis/Paul/PaulAdams_AnalysisQ2.Rmd
+++ b/analysis/Paul/PaulAdams_AnalysisQ2.Rmd
@@ -7,29 +7,33 @@ output: html_document
 
 ```{r, echo=T, message=F}
 library(pacman)
-p_load(tidyr,dplyr,purrr,stringr,ggplot2, MASS,DAAG, sjPlot, Hmisc)
+p_load(tidyr,dplyr,purrr,stringr,ggplot2, MASS,DAAG, sjPlot, Hmisc, fmsb, caret)
 ```
 
 ```{r, echo=F}
-df <- read.csv('./data/train.csv', stringsAsFactors = F)
-nrow(df)
+dfTrain <- read.csv('../data/train.csv', stringsAsFactors = F)
+dfTest <- read.csv('../data/test.csv', stringsAsFactors = F)
+nrow(dfTrain)
 
-# Living Area Square Footage > 4k feet was determined in Analysis Q1 to be outliers (four points)
+# Living Area Square Footage > 4k feet was determined in Analysis Q1 to be outliers (four points) belonging to a different population of houses that are larger than the houses in our analysis. Therefore, we have omitted this.
+
 # Count of all houses with living area square footage greater than 4k:
-nrow(df[which(df$GrLivArea > 4000),])
+nrow(dfTrain[which(dfTrain$GrLivArea > 4000),])
 
 # Include only living area square footage less than 4k:
-df <- df[which(df$GrLivArea < 4000),]
+dfTrain <- dfTrain[which(dfTrain$GrLivArea < 4000),]
 
 # Check the new maximum living area square footage, ensure less than 4k:
-max(df[order(-df$GrLivArea),47])
+max(dfTrain[order(-dfTrain$GrLivArea),47])
+
+
 ```
 
 ### The original data has 1460 rows. After removing four outliers, the new daata now has 1456 rows.
 ### Handle NAs
 ```{r, echo=T,warning=F, message=F}
 #See structure for replacing NAs
-str(df)
+str(dfTrain)
 
 # UDF for flattening and ordering the correlation matrix
 flattenCorrMatrix <- function(cormat, pmat) {
@@ -43,7 +47,7 @@ flattenCorrMatrix <- function(cormat, pmat) {
 }
 
 # Snapshot of all NAs
-na_count <- sapply(df, function(cnt) sum(length(which(is.na(cnt)))))
+na_count <- sapply(dfTrain, function(cnt) sum(length(which(is.na(cnt)))))
 na_count
 
 ########################################################################################################
@@ -55,11 +59,11 @@ na_count
 ##############################################################################
 
 # Which neighborhood is the NA for electrical in?
-noElectric <- df[which(is.na(df$Electrical)),c("SalePrice","Neighborhood")]
+noElectric <- dfTrain[which(is.na(dfTrain$Electrical)),c("SalePrice","Neighborhood")]
 noElectric
 
 # Who services electricity in this neighborhood?
-timberElectric <- arrange(df[which(df$Neighborhood=="Timber"),c("SalePrice","Electrical")], SalePrice)
+timberElectric <- arrange(dfTrain[which(dfTrain$Neighborhood=="Timber"),c("SalePrice","Electrical")], SalePrice)
 head(timberElectric)
 tail(timberElectric)
 # Timber looks to mostly use SBrkr so this should not be an issue to assume for the NA value for Electrical - it also fits the SalePrice range of SBrkr
@@ -67,44 +71,140 @@ tail(timberElectric)
 ##############################################################################
 #End Checking Electrical NAs##################################################
 ##############################################################################
-
-df$LotFrontage[is.na(df$LotFrontage)] <- 0
-df$Alley[is.na(df$Alley)] <- "None"
-df$MasVnrType[is.na(df$MasVnrType)] <- "None"
-df$MasVnrArea[is.na(df$MasVnrArea)] <- 0
-df$BsmtQual[is.na(df$BsmtQual)] <- 0
-df$BsmtCond[is.na(df$BsmtCond)] <- 0
-df$BsmtExposure[is.na(df$BsmtExposure)] <- 0
-df$BsmtFinType1[is.na(df$BsmtFinType1)] <- 0
-df$BsmtFinType2[is.na(df$BsmtFinType2)] <- 0
-df$Electrical[is.na(df$Electrical)] <- "SBrkr"
-df$FireplaceQu[is.na(df$FireplaceQu)] <- "None"
-df$GarageType[is.na(df$GarageType)] <- "None"
-df$GarageYrBlt[is.na(df$GarageYrBlt)] <- mean(df$YearBuilt)
-#df$GarageYrBlt[is.na(df$GarageYrBlt)] <- mean(df$GarageYrBlt)
-df$GarageFinish[is.na(df$GarageFinish)] <- "None"
-df$GarageQual[is.na(df$GarageQual)] <- "None"
-df$GarageCond[is.na(df$GarageCond)] <- "None"
-df$PoolQC[is.na(df$PoolQC)] <- "None"
-df$Fence[is.na(df$Fence)] <- "None"
-df$MiscFeature[is.na(df$MiscFeature)] <- "None"
+# 0.00001 insted of 0 for log transformations; 0.00001 is still insignificant
+dfTrain$LotFrontage[is.na(dfTrain$LotFrontage)] <- 0
+dfTrain$Alley[is.na(dfTrain$Alley)] <- "None"
+dfTrain$MasVnrType[is.na(dfTrain$MasVnrType)] <- "None"
+dfTrain$MasVnrArea[is.na(dfTrain$MasVnrArea)] <- 0
+dfTrain$BsmtQual[is.na(dfTrain$BsmtQual)] <- 0
+dfTrain$BsmtCond[is.na(dfTrain$BsmtCond)] <- 0
+dfTrain$BsmtExposure[is.na(dfTrain$BsmtExposure)] <- 0
+dfTrain$BsmtFinType1[is.na(dfTrain$BsmtFinType1)] <- 0
+dfTrain$BsmtFinType2[is.na(dfTrain$BsmtFinType2)] <- 0
+dfTrain$Electrical[is.na(dfTrain$Electrical)] <- "SBrkr"
+dfTrain$FireplaceQu[is.na(dfTrain$FireplaceQu)] <- "None"
+dfTrain$GarageType[is.na(dfTrain$GarageType)] <- "None"
+dfTrain$GarageYrBlt[is.na(dfTrain$GarageYrBlt)] <- mean(dfTrain$YearBuilt)
+#dfTrain$GarageYrBlt[is.na(dfTrain$GarageYrBlt)] <- mean(dfTrain$GarageYrBlt)
+dfTrain$GarageFinish[is.na(dfTrain$GarageFinish)] <- "None"
+dfTrain$GarageQual[is.na(dfTrain$GarageQual)] <- "None"
+dfTrain$GarageCond[is.na(dfTrain$GarageCond)] <- "None"
+dfTrain$PoolQC[is.na(dfTrain$PoolQC)] <- "None"
+dfTrain$Fence[is.na(dfTrain$Fence)] <- "None"
+dfTrain$MiscFeature[is.na(dfTrain$MiscFeature)] <- "None"
 
 ########################################################################################################
 #End Area for handling NAs##############################################################################
 ########################################################################################################
+```
+
+
+###Begin transforms as needed
+```{r, echo=T}
 
 # create dataframe for numeric data
-dfTest.numeric <- dplyr::select_if(df, is.numeric) %>% data.frame()
+dfTrainTest.numeric <- dplyr::select_if(dfTrain, is.numeric) %>% data.frame()
 
-# create dataframe for non-numeric data
-dfTest.nonnumeric <- dplyr::select_if(df, is.factor) %>% data.frame()
+# hist(dfTrain$MSSubClass)
+# hist(log(dfTrain$MSSubClass))
+# dfTrain$MSSubClass <- log(dfTrain$MSSubClass)
+# 
+# hist(dfTrain$LotFrontage)
+# hist(log(dfTrain$LotFrontage))
+# dfTrain$LotFrontage <- log(dfTrain$LotFrontage)
+# 
+# hist(dfTrain$LotArea)
+# hist(log(dfTrain$LotArea))
+# dfTrain$LotArea <- log(dfTrain$LotArea)
+# 
+# hist(dfTrain$OverallQual)
+# hist(dfTrain$OverallCond)
+# 
+# # At around 20 bins, the data starts to look reasonably trimodal. This needs ranking
+# hist(dfTrain$YearBuilt, breaks = 20, labels = T)
+# # At 70 bins, the data looks strongly trimodal.
+# hist(dfTrain$YearBuilt, breaks = 70)
+# 
+# hist(dfTrain$YearRemodAdd, breaks = 20) ### Trimodal; needs ranking
+# 
+# hist(dfTrain$MasVnrArea)
+# hist(log(dfTrain$MasVnrArea))
+# dfTrain$MasVnrArea <- log(dfTrain$MasVnrArea)
+# 
+# hist(dfTrain$BsmtFinSF2)
+# hist(log(dfTrain$BsmtFinSF2))
+# dfTrain$BsmtFinSF2 <- log(dfTrain$BsmtFinSF2)
+# 
+# hist(dfTrain$BsmtUnfSF)
+# hist(log(dfTrain$BsmtUnfSF))
+# dfTrain$BsmtUnfSF <- log(dfTrain$BsmtUnfSF)
+# 
+# hist(dfTrain$TotalBsmtSF)
+# 
+# hist(dfTrain$X1stFlrSF)
+# hist(log(dfTrain$X1stFlrSF))
+# dfTrain$X1stFlrSF <- log(dfTrain$X1stFlrSF)
+# 
+# hist(dfTrain$X2ndFlrSF)
+# hist(log(dfTrain$X2ndFlrSF))
+# dfTrain$X2ndFlrSF <- log(dfTrain$X2ndFlrSF)
+# 
+# hist(dfTrain$GrLivArea)
+# hist(log(dfTrain$GrLivArea))
+# dfTrain$GrLivArea <- log(dfTrain$GrLivArea)
+# 
+# hist(dfTrain$TotRmsAbvGrd)
+# hist(dfTrain$GarageArea)
+# 
+# hist(dfTrain$WoodDeckSF)
+# hist(log(dfTrain$WoodDeckSF))
+# dfTrain$WoodDeckSF <- log(dfTrain$WoodDeckSF)
+# 
+# hist(dfTrain$OpenPorchSF)
+# hist(log(dfTrain$OpenPorchSF))
+# dfTrain$OpenPorchSF <- log(dfTrain$OpenPorchSF)
+# 
+# hist(dfTrain$EnclosedPorch)
+# hist(log(dfTrain$EnclosedPorch))
+# dfTrain$EnclosedPorch <- log(dfTrain$EnclosedPorch)
+# 
+# hist(dfTrain$X3SsnPorch)
+# hist(log(dfTrain$X3SsnPorch))
+# dfTrain$X3SsnPorch <- log(dfTrain$X3SsnPorch)
+# 
+# hist(dfTrain$ScreenPorch)
+# hist(log(dfTrain$ScreenPorch))
+# dfTrain$ScreenPorch <- log(dfTrain$ScreenPorch)
+# 
+# hist(dfTrain$MiscVal)
+# hist(log(dfTrain$MiscVal))
+# dfTrain$MiscVal <- log(dfTrain$MiscVal)
+# 
+# 
+# # create dataframe for non-numeric data
+# dfTrainTest.nonnumeric <- dplyr::select_if(dfTrain, is.factor) %>% data.frame()
+# ```
+# 
+# ```{r, echo=T}
+# par(mfrow=c(4,2))
+# hist(dfTrain$MasVnrArea)
+# hist(log(dfTrain$MasVnrArea))
+# hist(dfTrain$BsmtFinSF2)
+# hist(log(dfTrain$BsmtFinSF2))
+# hist(dfTrain$BsmtUnfSF)
+# hist(log(dfTrain$BsmtUnfSF))
 ```
+
 
 ###Correlation matrix for quantitative data
 ```{r, echo=T,warning=F, message=F}
 #See what variables are correlated with eachother, p-values
-correlation.matrix <- rcorr(as.matrix(dfTest.numeric))
+correlation.matrix <- rcorr(as.matrix(dfTrainTest.numeric))
 corDF <- data.frame(flattenCorrMatrix(correlation.matrix$r, correlation.matrix$P))
+
+#Order the correlation matrix to show the highest correlated
+data.frame(corDF[order(-corDF$cor),])
+quantDataModel <- corDF[which(corDF$cor >= 0.5),]
 ```
 
 ### Testing Quantitative Data Model
@@ -112,15 +212,54 @@ corDF <- data.frame(flattenCorrMatrix(correlation.matrix$r, correlation.matrix$P
 #################################################################################
 ###########Start testing quantitative data model variable selection##############
 #################################################################################
-#Order the correlation matrix to show the highest correlated
-data.frame(corDF[order(-corDF$cor),])
-quantDataModel <- corDF[which(corDF$cor >= 0.5),]
 
-fitQuant <- lm(log(SalePrice) ~ OverallQual + YearBuilt + YearRemodAdd + TotalBsmtSF + GrLivArea + X1stFlrSF + FullBath + TotRmsAbvGrd + GarageCars + GarageArea + Neighborhood, data = df)
+#fitQuant <- lm(log(SalePrice) ~ OverallQual + YearBuilt + YearRemodAdd + TotalBsmtSF + GrLivArea + X1stFlrSF + FullBath + TotRmsAbvGrd + GarageCars + GarageArea + Neighborhood, data = dfTrain)
+
+fitQuant <- lm(log(SalePrice) ~ YearBuilt + YearRemodAdd + GrLivArea + X1stFlrSF + FullBath + TotRmsAbvGrd + GarageArea + Neighborhood, data = dfTrain)
 summary(fitQuant)
 
+#################### The model below is for starting the variable selection test and contains all 81 variables (including ID)
+
 # Model using all variables
-fitFull <- lm(log(SalePrice) ~ Id + MSSubClass + MSZoning + LotFrontage + LotArea + Street + Alley + LotShape + LandContour + Utilities + LotConfig + LandSlope + Neighborhood + Condition1 + Condition2 + BldgType + HouseStyle + OverallQual + OverallCond + YearBuilt + YearRemodAdd + RoofStyle + RoofMatl + Exterior1st + Exterior2nd + MasVnrType + MasVnrArea + ExterQual + ExterCond + Foundation + BsmtQual + BsmtCond + BsmtExposure + BsmtFinType1 + BsmtFinSF1 + BsmtFinType2 + BsmtFinSF2 + BsmtUnfSF + TotalBsmtSF + Heating + HeatingQC + CentralAir + Electrical + X1stFlrSF + X2ndFlrSF + LowQualFinSF + GrLivArea + BsmtFullBath + BsmtHalfBath + FullBath + HalfBath + BedroomAbvGr + KitchenAbvGr + KitchenQual + TotRmsAbvGrd + Functional + Fireplaces + FireplaceQu + GarageType + GarageYrBlt + GarageFinish + GarageCars + GarageArea + GarageQual + GarageCond + PavedDrive + WoodDeckSF + OpenPorchSF + EnclosedPorch + X3SsnPorch + ScreenPorch + PoolArea + PoolQC + Fence + MiscFeature + MiscVal + MoSold + YrSold + SaleType + SaleCondition, data = df)
+fitFull.all1 <- lm(log(SalePrice) ~ Id + MSSubClass + MSZoning + LotFrontage + LotArea + Street + Alley + LotShape + LandContour + Utilities + LotConfig + LandSlope + Neighborhood + Condition1 + Condition2 + BldgType + HouseStyle + OverallQual + OverallCond + YearBuilt + YearRemodAdd + RoofStyle + RoofMatl + Exterior1st + Exterior2nd + MasVnrType + MasVnrArea + ExterQual + ExterCond + Foundation + BsmtQual + BsmtCond + BsmtExposure + BsmtFinType1 + BsmtFinSF1 + BsmtFinType2 + BsmtFinSF2 + BsmtUnfSF + TotalBsmtSF + Heating + HeatingQC + CentralAir + Electrical + X1stFlrSF + X2ndFlrSF + LowQualFinSF + GrLivArea + BsmtFullBath + BsmtHalfBath + FullBath + HalfBath + BedroomAbvGr + KitchenAbvGr + KitchenQual + TotRmsAbvGrd + Functional + Fireplaces + FireplaceQu + GarageType + GarageYrBlt + GarageFinish + GarageCars + GarageArea + GarageQual + GarageCond + PavedDrive + WoodDeckSF + OpenPorchSF + EnclosedPorch + X3SsnPorch + ScreenPorch + PoolArea + PoolQC + Fence + MiscFeature + MiscVal + MoSold + YrSold + SaleType + SaleCondition, data = dfTrain)
+
+fitFull.all2 <- lm(log(SalePrice) ~ + BsmtFinSF2 + BsmtUnfSF + CentralAir + Condition1 +HalfBath + Heating + KitchenQual + LandSlope + MSZoning +Neighborhood + OverallCond + OverallQual + RoofMatl + X1stFlrSF + X2ndFlrSF +YearBuilt + YearRemodAdd, data = dfTrain)
+          
+fitFull.all3 <- lm(log(SalePrice) ~ + BsmtFinSF2 + BsmtUnfSF + CentralAir + HalfBath + KitchenQual + MSZoning +Neighborhood + OverallCond + OverallQual + RoofMatl + X1stFlrSF + X2ndFlrSF +YearBuilt + YearRemodAdd, data = dfTrain)
+
+# Final removal: BsmtFinSF2 - this is possibly because basements don't contribute to the square footage of a house, but are useful; nobody wants to pay significantly more for one, but would like one. An unfinished one is possibly good enough. This change reflected in .all4
+fitFull.all3 <- lm(log(SalePrice) ~ + BsmtFinSF2 + BsmtUnfSF + CentralAir + HalfBath + KitchenQual + MSZoning +Neighborhood + OverallCond + OverallQual + RoofMatl + X1stFlrSF + X2ndFlrSF +YearBuilt + YearRemodAdd, data = dfTrain)
+
+# Again, people want basements, but since they don't contribute much to SalePrice (and thus re-sale price), they're willing to pay extra to have a basement, but not willing to pay much extra to have a particularly nice basement. 
+fitFull.all4 <- lm(log(SalePrice) ~ BsmtUnfSF + CentralAir + HalfBath + KitchenQual + Neighborhood + OverallCond + OverallQual + RoofMatl + X1stFlrSF + X2ndFlrSF + YearBuilt + MSZoning:Neighborhood + OverallQual:Neighborhood + OverallQual:Neighborhood + YearBuilt:Neighborhood, data = dfTrain)
+summary(fitFull.all4)
+
+# dfTested.pred <- predict(fitFull.all4, dfTest)
+# dfTested <- data.frame(dfTested.pred)
+# exp(dfTested$dfTested.pred)
+# write.csv(dfTested, "Tested.csv")
+# #colnames(dfTested) <- c("Id", "SalePrice")
+# dim(dfTested.pred)
+
+############################################### Model with both Quant and Qual Data############
+# The model used here's variables went through process of selection/elimination#
+
+# Forward Selection
+stepForward.full.model4 <- stepAIC(fitFull.all4, direction = "forward", trace = F)
+summary(stepForward.full.model4)
+stepForward.full.model4$anova
+
+# Backward Selection
+stepBackward.full.model4 <- stepAIC(fitFull.all4, direction = "backward", trace = F)
+summary(stepBackward.full.model4)
+stepBackward.full.model4$anova
+
+# Stepwise Selection
+stepwise.full.model4 <- stepAIC(fitFull.all4, direction = "both", trace = F)
+summary(stepwise.full.model4)
+stepwise.full.model4$anova
+############################################### End of Model with both Quant and Qual Data#########
+
 
 # Forward Selection
 stepForward.Quant.model <- stepAIC(fitQuant, direction = "forward", trace = F)
@@ -148,12 +287,12 @@ stepwise.Quant.model$anova
 #################################################################################
 #############Start testing qualitative data model variable selection#############
 #################################################################################
-fitQual <- lm(log(SalePrice) ~ MSZoning + Street + Alley + LotShape + LandContour + Utilities + LotConfig + LandSlope + Neighborhood + Condition1 + Condition2 + BldgType + HouseStyle + RoofStyle + RoofMatl + Exterior1st + Exterior2nd + MasVnrType + ExterQual + ExterCond + Foundation + BsmtQual + BsmtCond + BsmtExposure + BsmtFinType1 + BsmtFinType2 + Heating + HeatingQC + CentralAir + Electrical + KitchenQual + FireplaceQu + GarageType + GarageFinish + GarageQual + GarageCond + PavedDrive + PoolQC + Fence+ MiscFeature + SaleType + SaleCondition, data=df)
+fitQual <- lm(log(SalePrice) ~ MSZoning + Street + Alley + LotShape + LandContour + Utilities + LotConfig + LandSlope + Neighborhood + Condition1 + Condition2 + BldgType + HouseStyle + RoofStyle + RoofMatl + Exterior1st + Exterior2nd + MasVnrType + ExterQual + ExterCond + Foundation + BsmtQual + BsmtCond + BsmtExposure + BsmtFinType1 + BsmtFinType2 + Heating + HeatingQC + CentralAir + Electrical + KitchenQual + FireplaceQu + GarageType + GarageFinish + GarageQual + GarageCond + PavedDrive + PoolQC + Fence+ MiscFeature + SaleType + SaleCondition, data=dfTrain)
 summary(fitQual)
 
-fitQual_Filtered <- lm(log(SalePrice) ~ Neighborhood + LotConfig + Condition1 + BldgType + HouseStyle + RoofMatl + Heating + KitchenQual + GarageQual + GarageCond + PoolQC, data=df)
+fitQual_Filtered <- lm(log(SalePrice) ~ Neighborhood + LotConfig + Condition1 + BldgType + HouseStyle + RoofMatl + Heating + KitchenQual + GarageQual + GarageCond + PoolQC, data=dfTrain)
 
-fitQual_double.Filtered <- lm(log(SalePrice) ~ Neighborhood + LotConfig + BldgType + HouseStyle + RoofMatl + KitchenQual + PoolQC, data=df) ##LotConfig mostly only matters when it's a Culdesac
+fitQual_double.Filtered <- lm(log(SalePrice) ~ Neighborhood + LotConfig + BldgType + HouseStyle + RoofMatl + KitchenQual + PoolQC, data=dfTrain) ##LotConfig mostly only matters when it's a Culdesac
 
 # Forward Selection
 stepForward.Qual.model <- stepAIC(fitQual_double.Filtered, direction = "forward", trace = F)
@@ -180,7 +319,7 @@ stepwise.Qual.model$anova
 #################################################################################
 ##############Start testing quant+qual data model variable selection#############
 #################################################################################
-fit_model.Filtered <- lm(log(SalePrice) ~ OverallQual + YearBuilt + YearRemodAdd + TotalBsmtSF + GrLivArea + TotRmsAbvGrd + GarageCars + GarageArea + Neighborhood + LotConfig + BldgType + HouseStyle + RoofMatl + KitchenQual + PoolQC, data = df)
+fit_model.Filtered <- lm(log(SalePrice) ~ OverallQual + YearBuilt + YearRemodAdd + TotalBsmtSF + GrLivArea + TotRmsAbvGrd + GarageCars + GarageArea + Neighborhood + LotConfig + BldgType + HouseStyle + RoofMatl + KitchenQual + PoolQC, data = dfTrain)
 
 # Forward Selection
 stepForward.model <- stepAIC(fit_model.Filtered, direction = "forward", trace = F)
@@ -197,12 +336,18 @@ stepwise.model <- stepAIC(fit_model.Filtered, direction = "both", trace = F)
 summary(stepwise.model)
 stepwise.model$anova
 
+# Analyze partial regression of variables applied in model to determine if they're still needed.
+library(car)
+crPlots(fit_model.Filtered) 
 #Both backward and stepwise selection indicate to remove HouseStyle, TotRmsAbvGrd, X1stFlrSF, and FullBath
 
 #################################################################################
 ################End testing quant+qual data model variable selection#############
 #################################################################################
 ```
+
+
+
 
 # Appendix
 ```{r, echo=T}
