--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -11,3 +11,14 @@
       year = {2016},
       note = {Data retrieved from the Kaggle website,
               \url{https://www.kaggle.com/c/house-prices-advanced-regression-techniques/data}}}
+              
+@article{Cock,
+    author =       "D. D. Cock",
+    title =        "Ames, Iowa: Alternative to the Boston Housing Data as an End of Semester Regression Project.",
+    journal =      "Journal of Statistics Education",
+    volume =       "19",
+    number =       "3",
+    year =         "2011",
+    DOI =          "10.1080/10691898.2011.11889627",
+    url =          "http://jse.amstat.org/v19n3/decock.pdf"
+}
