--- a/analysis/HousePriceRegressionAnalysis.Rmd
+++ b/analysis/HousePriceRegressionAnalysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Title"
+title: "Regression Analysis of the Ames, Iowa Dataset"
 author: "Stuart Miller, Paul Adams, and Chance Robinson"
 date: |
   Master of Science in Data Science, Southern Methodist University, USA
@@ -20,8 +20,9 @@ header-includes:
    - \usepackage[utf8]{inputenc}
    - \usepackage[T1]{fontenc}
    - \usepackage{setspace}
+   - \usepackage{hyperref}
    - \onehalfspacing
-   - \setcitestyle{round}
+   - \setcitestyle{numbers}
    - \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 editor_options: 
   chunk_output_type: console
@@ -66,10 +67,9 @@ train.mod <- train %>% filter(GrLivArea < 4000)
 
 @Sleuth
 
-# Ames, Iowa Data
+# Ames, Iowa Data Set
 
-
-@Kaggle2016
+The Ames, Iowa Data Set describes the sale of individual residential properities from 2006-2010 in Ames, Iowa \cite{Cock}. The data was retreved from the dataset hosting site Kaggle, where is it listed under a machine learning competition named \href{https://www.kaggle.com/c/house-prices-advanced-regression-techniques/overview}{\textit{House Prices: Advanced Regression Techniques}} \cite{Kaggle2016}. The data is comprized of 37 numeric features, 43 non-numeric features and an obervation index split between a training set and a testing set, which contain 1460 and 1459 observations, respectively. The response variable (`SalePrice`) is only provided for the training set. The output of a model on the test set can be submitted to the Kaggle competition for scoring the performance of the model in terms of RMSE. The first analysis models property sale prices (`SalePrice`) as the response of living room area (`GrLivArea`) of the property and neighborhood (`Neighborhood`) where it is located. **Add some details on the question 2 variables?**
 
 # Analysis Question I
 
