--- a/analysis/HousePriceRegressionAnalysis.tex
+++ b/analysis/HousePriceRegressionAnalysis.tex
@@ -24,7 +24,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={Title},
+            pdftitle={Regression Analysis of the Ames, Iowa Dataset},
             pdfauthor={Stuart Miller, Paul Adams, and Chance Robinson},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -83,7 +83,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{Title}
+  \title{Regression Analysis of the Ames, Iowa Dataset}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
     \author{Stuart Miller, Paul Adams, and Chance Robinson}
@@ -97,8 +97,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{setspace}
+\usepackage{hyperref}
 \onehalfspacing
-\setcitestyle{round}
+\setcitestyle{numbers}
 \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 
 \begin{document}
@@ -109,10 +110,25 @@
 
 \citet{Sleuth}
 
-\hypertarget{ames-iowa-data}{%
-\section{Ames, Iowa Data}\label{ames-iowa-data}}
+\hypertarget{ames-iowa-data-set}{%
+\section{Ames, Iowa Data Set}\label{ames-iowa-data-set}}
 
-\citet{Kaggle2016}
+The Ames, Iowa Data Set describes the sale of individual residential
+properities from 2006-2010 in Ames, Iowa \cite{Cock}. The data was
+retreved from the dataset hosting site Kaggle, where is it listed under
+a machine learning competition named
+\href{https://www.kaggle.com/c/house-prices-advanced-regression-techniques/overview}{\textit{House Prices: Advanced Regression Techniques}}
+\cite{Kaggle2016}. The data is comprized of 37 numeric features, 43
+non-numeric features and an obervation index split between a training
+set and a testing set, which contain 1460 and 1459 observations,
+respectively. The response variable (\texttt{SalePrice}) is only
+provided for the training set. The output of a model on the test set can
+be submitted to the Kaggle competition for scoring the performance of
+the model in terms of RMSE. The first analysis models property sale
+prices (\texttt{SalePrice}) as the response of living room area
+(\texttt{GrLivArea}) of the property and neighborhood
+(\texttt{Neighborhood}) where it is located. \textbf{Add some details on
+the question 2 variables?}
 
 \hypertarget{analysis-question-i}{%
 \section{Analysis Question I}\label{analysis-question-i}}
